test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_hidden.rs
use clapi::macros::*;

#[command]
fn app(){
    #[subcommand(hidden=1)]
    fn child(){}
}

fn main(){}