test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_hidden.stderr
error: custom attribute panicked
 --> $DIR/invalid_subcommand_hidden.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `hidden` must be a bool literal
